2011-11-11  Adrienne Walker  <enne@google.com>

        [chromium] Expose mock scrollbars to window.internals
        https://bugs.webkit.org/show_bug.cgi?id=72195

        Reviewed by James Robinson.

        * win/WebKit2.def:
        * win/WebKit2CFLite.def:

2011-11-16  Dan Bernstein  <mitz@apple.com>

        WebKit2 part of <rdar://problem/10262242> Add API for paginated display
        https://bugs.webkit.org/show_bug.cgi?id=72537

        Reviewed by Anders Carlsson.

        * Shared/WebPageCreationParameters.cpp:
        (WebKit::WebPageCreationParameters::encode): Encode the pagination mode and gap between pages.
        (WebKit::WebPageCreationParameters::decode): Decode the pagination mode and gap between pages.
        * Shared/WebPageCreationParameters.h: Added paginationMode and gapBetweenPages members.
        * UIProcess/API/C/WKPage.cpp:
        (WKPageSetPaginationMode): Added this API wrapper.
        (WKPageGetPaginationMode): Ditto.
        (WKPageSetGapBetweenPages): Ditto.
        (WKPageGetGapBetweenPages): Ditto.
        (WKPageGetPageCount): Ditto.
        * UIProcess/API/C/WKPagePrivate.h: Added an enum and a definition of WKPaginationMode and
        accessors.
        * UIProcess/API/mac/WKBrowsingContextController.mm:
        (-[WKBrowsingContextController setPaginationMode:]): Added this API wrapper.
        (-[WKBrowsingContextController paginationMode]): Ditto.
        (-[WKBrowsingContextController setGapBetweenPages:]): Ditto.
        (-[WKBrowsingContextController gapBetweenPages]): Ditto.
        (-[WKBrowsingContextController pageCount]): Ditto.
        * UIProcess/API/mac/WKBrowsingContextControllerPrivate.h: Added. Includes an enum and a definition
        of WKBrowsingContextPaginationMode and property declarations.
        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::WebPageProxy): Added intialization of m_paginationMode, m_gapBetweenPages,
        and m_pageCount.