@@ -1,3 +1,13 @@
+2011-11-16  Caio Marcelo de Oliveira Filho  <caio.oliveira@openbossa.org>
+
+        [Qt] Fix build after WTR AX support
+        https://bugs.webkit.org/show_bug.cgi?id=72560
+
+        Reviewed by Geoffrey Garen.
+
+        * WebKitTestRunner/InjectedBundle/DerivedSources.pri:
+        * WebKitTestRunner/InjectedBundle/Target.pri:
+
 2011-11-16  Tony Chang  <tony@chromium.org>
 
         repurpose the flexbox bot for grid layout
